# linera-activity-log

./: .env.example  .envrc.example  .gitattributes  .gitignore  README.md
.github/workflows/: ci.yml
linera-app/: Cargo.toml
linera-app/src/: contract.rs  lib.rs  service.rs  state.rs
relayer/: package-lock.json  package.json
relayer/src/: auth.ts  backend.ts  config.ts  index.ts  linera.ts  store.ts  validation.ts
relayer/src/handlers/: event.ts  get.ts  status.ts
relayer/test/: auth.test.ts  backend.test.ts  e2e.test.ts  linera.test.ts  store.test.ts  validation.test.ts
scripts/: enable-direnv.sh  linera-publish.sh  quickstart.sh
shared/: activityEvent.schema.json  types.ts  validate.ts
